# jira-mcp-server

./: .env.example  .gitignore  251217-RECOMMENDATIONS.md  251217-TEST-TODO.md  251217-UNIT-TEST-DETAILS.md  AGENTS.md  CHANGES.md  LICENSE.txt  README.md  RELEASES.md  SECURITY_IMPROVEMENTS.md  SECURITY_PERFORMANCE_REVIEW.md  TEST_RESULTS.md  pyproject.toml
docs/: 251219-TOOL-IMPLEMENTATION.md  251223-JIRA-PROJECT-KEY-VALIDATION.md  SECURITY.md  SETUP-GUIDE.md  TOOL_IMPLEMENTATION_PLAN.md
docs/agents/: 251217-UPDATES.md  251219-TOOL-IMPLEMENTATION.md  251223-REMOVE-TLS.md  251223-TLS-REMOVAL-SUMMARY.md  251224-SANITIZATION-REVIEW.md  251224-SANITIZATION-SUMMARY.md
jira_mcp/: __init__.py  __main__.py  app.py  config.py  http_client.py  jira_api.py  sanitization.py  server.py  tools.py
src/jira_mcp_server/: __init__.py  __main__.py  config.py  http_client.py  jira_api.py  sanitization.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_jira_api_error_handling.py  test_jira_mcp_server.py  test_sanitization.py  test_tools.py
