[project]
name = "jira-mcp-server"
version = "0.1.3"
author = "kenphused"
description = "MCP Server to Access Cloud Jira Instances"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.125.0",
    "mcp>=1.24.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.14.9",
]

[project.scripts]
jira-mcp-server = "jira_mcp.app:main"
