[project]
name = "jira-mcp-server"
version = "0.2.0"
description = "MCP Server to Access Cloud Jira Instances"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.125.0",
    "mcp>=1.24.0",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
jira-mcp-server = "jira_mcp_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jira_mcp_server*"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.14.9",
]

